fix: spacing on checkbox

--- a/obsidian-night-owl-theme.css
+++ b/obsidian-night-owl-theme.css
@@ -663,7 +663,7 @@ ul .task-list-item ul::before {
   .markdown-preview-view .task-list-item-checkbox:checked::before {
     content: '✓';
     position: absolute;
-    left: 6px;
+    left: -1px;
     top: -3px;
     color: var(--text-accent);
     font-size: 1rem;
